update saml return
Former-commit-id: a9636c5176fd0de8d692ddf97a5aa3e34652e6e9